<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/guni_pink_logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        app:cardElevation="40dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="25dp"
                android:text="@string/emailid"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editText1"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editText1"
                android:layout_width="282dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:inputType="textEmailAddress"
                app:layout_constraintBaseline_toBaselineOf="@id/textView1"
                app:layout_constraintBaseline_toBottomOf="@id/textView1"
                app:layout_constraintStart_toEndOf="@id/textView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView1"
                tools:layout_editor_absoluteX="84dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="36dp"
                android:text="@string/pwd1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="264dp"
                android:layout_height="44dp"
                android:ems="10"
                android:inputType="text"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintBaseline_toBottomOf="@id/textView2"
                app:layout_constraintBaseline_toBaselineOf="@id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="28dp"
                android:text="@string/forgotpwd"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginEnd="142dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="32dp"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>